[gd_scene load_steps=3 format=2]

[ext_resource path="res://engine/Character Creator/CharacterCreatorMenuSystem.gd" type="Script" id=1]
[ext_resource path="res://engine/Character Creator/Buttons.tscn" type="PackedScene" id=2]

[node name="CharacterCreatorMenuSystem" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -248.0
margin_top = -118.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 211.0
margin_bottom = 180.0

[node name="Headwear" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 211.0
margin_bottom = 42.0
buttonName = "Headwear"

[node name="head" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 211.0
margin_bottom = 88.0
buttonName = "head"

[node name="Eyes" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 92.0
margin_right = 211.0
margin_bottom = 134.0
buttonName = "Eyes"

[node name="Skincolor" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 138.0
margin_right = 211.0
margin_bottom = 180.0
buttonName = "Skincolor"

[connection signal="change" from="HBoxContainer/VBoxContainer/Headwear" to="." method="_on_Headwear_change"]
[connection signal="change" from="HBoxContainer/VBoxContainer/head" to="." method="_on_head_change"]
[connection signal="change" from="HBoxContainer/VBoxContainer/Eyes" to="." method="_on_Eyes_change"]
[connection signal="change" from="HBoxContainer/VBoxContainer/Skincolor" to="." method="_on_Skincolor_change"]
